--- a/deployment/regionalBaseInfra.yaml
+++ b/deployment/regionalBaseInfra.yaml
@@ -494,7 +494,7 @@ Resources:
           Resources:
             - "secrets"
       ResourcesVpcConfig:
-        EndpointPublicAccess: false
+        EndpointPublicAccess: true
         EndpointPrivateAccess: true
         SecurityGroupIds:
           - !Ref EKSClusterSecurityGroup
