Skeleton for checkout

--- a/source/catalog/_infra/kustomize/base/configmap.yaml
+++ b/source/catalog/_infra/kustomize/base/configmap.yaml
@@ -3,6 +3,6 @@ kind: ConfigMap
 metadata:
   name: catalog
 data:
-  DB_NAME: catalog
-  DB_ENDPOINT: catalog-mysql:3306
-  DB_READ_ENDPOINT: catalog-mysql:3306
+  DB_NAME: "base_db_name"
+  DB_ENDPOINT: "base_db_endpoint"
+  DB_READ_ENDPOINT: "base_db_reader_endpoint"
