Update catalog to use actual repository to mysql

--- a/source/catalog/makefile
+++ b/source/catalog/makefile
@@ -19,5 +19,5 @@ docker-push:
 	docker push ${IMG}
 
 deploy-dev:
-	 echo "IMAGE_REPO_WITH_TAG=${IMG}" > ./_infra/kustomize/overlays/dev/.env
-	 kustomize build ./_infra/kustomize/overlays/dev
+	echo "IMAGE_REPO_WITH_TAG=${IMG}" > ./_infra/kustomize/overlays/dev/.env
+	kustomize build ./_infra/kustomize/overlays/dev | kubectl apply -f -
