--- a/source/catalog/_infra/kustomize/base/deployment.yaml
+++ b/source/catalog/_infra/kustomize/base/deployment.yaml
@@ -27,17 +27,17 @@ spec:
         fsGroup: 1000
       containers:
         - name: catalog
-          env:
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: catalog-db
-                  key: username
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: catalog-db
-                  key: password
+#          env:
+#            - name: DB_USER
+#              valueFrom:
+#                secretKeyRef:
+#                  name: catalog-db
+#                  key: username
+#            - name: DB_PASSWORD
+#              valueFrom:
+#                secretKeyRef:
+#                  name: catalog-db
+#                  key: password
           envFrom:
             - configMapRef:
                 name: catalog
