--- a/source/catalog/_infra/kustomize/overlays/dev/db.properties
+++ b/source/catalog/_infra/kustomize/overlays/dev/db.properties
@@ -1,3 +1,3 @@
 DB_NAME=catalog
-DB_ENDPOINT=catalog-mysql:3306
-DB_READ_ENDPOINT=catalog-mysql:3306
+DB_ENDPOINT=guidance.cluster-cjywpc426u5c.us-east-1.rds.amazonaws.com:3306
+DB_READ_ENDPOINT=guidance.cluster-cjywpc426u5c.us-east-1.rds.amazonaws.com:3306
